--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd)">
-<!--[if gt IE 1]><html xmlns="http://www.w3.org/1999/xhtml" class="ie)"><![endif]--><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<!--[if gt IE 1]><html xmlns="http://www.w3.org/1999/xhtml" class="ie)"><![endif]--><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+
 	<head>
-		<meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7; IE=EDGE" />		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" lang="en" />
+		<meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7; IE=EDGE" />
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" lang="en" />
 	        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
 		<title>Mills of Britain website - National Library of Scotland / University of Glasgow</title>
 		<!-- slider css -->
@@ -37,7 +39,7 @@
 
 
 
-        <!--#include file="/assets/includes/gtm.stm" -->
+
 </head>
 
 	<body>
@@ -110,7 +112,8 @@
 
 <div id="showmaplocationinfo"></div>
 
-
+
+
 	    <div id="sidebar">
 
                 <button type="button" id="hide" class="close" >
@@ -139,7 +142,8 @@
 							<input id="onlyshow275" type="checkbox"/> 275 metres of river? </label> </td></tr></table>
 
 			<br/>
-
+
+
 
 
 
@@ -254,9 +258,9 @@
 	             jQuery("#sidebar").show();
 	             jQuery("#show").hide();
 	         });
-		</script>
 
-<!--#include file="/assets/includes/gahelper.stm" -->
+		</script>
+
 
 	</body>
 </html>
