--- a/project/accuracy/index.html
+++ b/project/accuracy/index.html
@@ -29,7 +29,7 @@
 
 			<div id="headerlinks">
 	
-				<p><a href="/projects/mills-of-britain/">Map</a> &nbsp; &nbsp;    <a href="../background/">Background</a>  &nbsp; &nbsp; <strong>Project</strong> &nbsp; &nbsp; <a href="../explore/">Explore More</a>  &nbsp; &nbsp; </p> 
+				<p><a href="/projects/mills-of-britain/">Map</a> &nbsp; &nbsp;    <a href="../../background/">Background</a>  &nbsp; &nbsp; <strong>Project</strong> &nbsp; &nbsp; <a href="../../explore/">Explore More</a>  &nbsp; &nbsp; </p> 
 	
 			</div>
 
