--- a/background/index.html
+++ b/background/index.html
@@ -107,7 +107,8 @@
 			</div>			
 			
 			<p>For many regions of Scotland, especially so for the Highlands, the Roy Map is the most detailed—and often only—map available for the entire eighteenth-century until private and/or Ordnance Survey mapping was conducted more than half a century later. Therefore the Roy Map remains a valuable cartographic resource for the early industrial period in Scotland. Yet even the Roy Map is not without its critics regarding its accuracy, including Roy himself.<sup>13</sup>   It has limitations and deficiencies in terms of triangulation and representation of topography, like many early county maps and even some of the first maps appearing in the Old Series.<sup>14</sup>    </p>
-			
+
+			<div class = "notes">
 
 			<h2>Notes</h2>
 			
@@ -146,6 +147,7 @@
 			
 			</ol>
 
+			</div>			
 
 			</div>
 
