--- a/background/index.html
+++ b/background/index.html
@@ -57,7 +57,7 @@
 			
 			<p>Mills have been iconic features on our rivers and landscapes for nearly two millennia.<sup>1</sup> Widely considered to be some of the most powerful, elaborate and costly machines constructed outside of wartime by early modern and premodern societies<sup>2</sup> , <a href="projects/mills/about.html">water- and windmills</a> provided the mechanical power used for a wide range of processing and industrial activities necessary for everyday life. Our database compiles evidence about mills and their locations using the graphical, textual and positional information of these features as preserved in early British maps. </p>
 
-			<p>For more information about the history of mills and different kinds of mills, please visit the <a href="projects/mills/about.html">About section</a> of the <a href="projects/mills/">Scottish water mills website</a> for a brief overview.</p> 
+			<p>For more information about the history of mills and different kinds of mills, please visit the <a href="/projects/mills/about.html">About section</a> of the <a href="/projects/mills/">Scottish water mills website</a> for a brief overview.</p> 
 
 			<h2>County Maps: A Technical Revolution </h2>
 			
