--- a/background/index.html
+++ b/background/index.html
@@ -65,7 +65,7 @@
 			
 			<div align="center"><img src="../img/fig1.jpg" width="600" alt="Detail from Yates, W. 1786. The County Palantine of Lancaster" title="Detail from Yates, W. 1786. The County Palantine of Lancaster" border="1" />
 			
-				<div class="imgcap"><strong>Figure 1</strong>. We noted mills on over 140 early county maps made by an array of map-makers. Watermills were often indicated on early county maps with waterwheel symbols (small circles with radiating spokes or vanes). How many watermills can you find? Source: Yates, W. 1786. The County Palantine of Lancaster, Surveyed by William Yates, Engraved by Thomas Billinge [engraved map on 8 sheets]. Scale: ca. 1 inch = 1 mile. London. CC-BY National Library of Scotland: <a href="/joins/10434.html">https://maps.nls.uk/joins/10434.html</a>.</div>
+				<div class="imgcap"><strong>Figure 1</strong>. We noted mills on over 140 early county maps made by an array of map-makers. Watermills were often indicated on early county maps with waterwheel symbols (small circles with radiating spokes or vanes). How many watermills can you find? Source: Yates, W. 1786. The County Palantine of Lancaster, Surveyed by William Yates, Engraved by Thomas Billinge [engraved map on 8 sheets]. Scale: ca. 1 inch = 1 mile. London. CC-BY National Library of Scotland: <a href="/joins/10434.html">View map</a>.</div>
 				
 			
 			</div>
