--- a/background/index.html
+++ b/background/index.html
@@ -136,7 +136,7 @@
 			
 			<li>Smith, D., 1989, The representation of non-extractive industry on large-scale county maps of England and Wales 1700-c.1840: <em>The Cartographic Journal</em>, 26, pp. 134-147; Smith, D., 1990, The representation of industry on large-scale county maps of England and Wales 1700-c.1840: <em>Industrial Archaeology Review</em>, XII, 2, pp. 153-177; Smith, D., 1992, Inset town plans on large-scale maps of Great Britain: <em>The Cartographic Journal</em>, 29, pp. 118-136.</li>
 			
-			<li>Seymour (1980). 
+			<li>Seymour (1980). </li>
 			
 			<li>Skelton, R.A., 1967, The military survey of Scotland 1747-1755: <em>Scottish Geographical Magazine</em>, 83, 1, pp. 5-16. </li>
 			
