--- a/background/index.html
+++ b/background/index.html
@@ -11,6 +11,8 @@
 		<link type="text/css" rel="stylesheet" href="../css/maincss.css" media="screen" /> 
 
 
+
+        <!--#include file="/assets/includes/gtm.stm" -->
 </head>
 
 	<body>
@@ -55,7 +57,7 @@
 
 			<h1>Background</h1>
 			
-			<p>Mills have been iconic features on our rivers and landscapes for nearly two millennia.<sup>1</sup> Widely considered to be some of the most powerful, elaborate and costly machines constructed outside of wartime by early modern and premodern societies<sup>2</sup> , <a href="projects/mills/about.html">water- and windmills</a> provided the mechanical power used for a wide range of processing and industrial activities necessary for everyday life. Our database compiles evidence about mills and their locations using the graphical, textual and positional information of these features as preserved in early British maps. </p>
+			<p>Mills have been iconic features on our rivers and landscapes for nearly two millennia.<sup><a href="#note1">1</a></sup> Widely considered to be some of the most powerful, elaborate and costly machines constructed outside of wartime by early modern and premodern societies<sup>2</sup>, <a href="projects/mills/about.html">water- and windmills</a> provided the mechanical power used for a wide range of processing and industrial activities necessary for everyday life. Our database compiles evidence about mills and their locations using the graphical, textual and positional information of these features as preserved in early British maps. </p>
 
 			<p>For more information about the history of mills and different kinds of mills, please visit the <a href="/projects/mills/about.html">About section</a> of the <a href="/projects/mills/">Scottish water mills website</a> for a brief overview.</p> 
 
@@ -73,7 +75,7 @@
 			<p>Funded by a variety of private enterprise and encouraged by awards set by the Society for Arts after 1759 CE,<sup>4</sup>  well over one hundred new county map surveys were conducted at the one- to four-inches to the mile scales into the early nineteenth century. A diverse array of amateur and professional mapmakers used some of the most advanced techniques of the time in the field to produce county maps for their subscribing sponsors.<sup>5</sup>  Before financial support by the central government in the mid-eighteenth century, carrying out accurate and timely surveys was exceedingly expensive and logistically difficult. This often led to considerable debt and bankruptcy (or worse) for numerous individuals involved in the map-making trade, including Thomas Jefferys, Charles Price, John Senex, Emanuel Bowen, Andrew Dury, Peter Burdett, Andrew Bryant, John Thompson, and the Greenwood brothers.<sup>6</sup> </p>
 			
 			
-			<p>By ca.1800 CE, however, mapmakers’ efforts produced not only beautiful but increasingly accurate engraved maps for nearly all of England, lowland Scotland and much of Wales. Many of the individuals involved with county surveys helped give rise to the incipient Ordnance Survey (then, the Trigonometric Survey of the Board of Ordnance; see Seymour)<sup>7</sup>  and established the modern one-inch map as a cartographic standard.<sup>8</sup>  By the 1820s, nearly every county was mapped at one inch to the mile resolution, with detailed maps from these surveys widely available to people of all classes and professions alike.</p>
+			<p>By ca.1800 CE, however, mapmakers’ efforts produced not only beautiful but increasingly accurate engraved maps for nearly all of England, lowland Scotland and much of Wales. Many of the individuals involved with county surveys helped give rise to the incipient Ordnance Survey (then, the Trigonometric Survey of the Board of Ordnance; see Seymour)<sup>7</sup>  and established the modern one-inch map as a cartographic standard.<sup>8</sup>  By the 1820s, nearly every county was mapped at one inch to the mile <span style="text-decoration: line-through">resolution</span> <span style="color:red">scale</span>, with detailed maps from these surveys widely available to people of all classes and professions alike.</p>
 	
 			<div align="center"><img src="../img/fig2.jpg" width="600" alt="Dates of survey for the county maps used to map mills" title="Dates of survey for the county maps used to map mills" border="1" />
 
@@ -93,7 +95,7 @@
 			</div>
 
 
-			<p>The new surveyance, spatial coverage and resolution of county maps alone make them a valuable collection of historic information. Large-scale county maps importantly document early industrial development at the regional to national level during a period of history often referred to as the ‘Industrial Revolution’. During this period, advances in technology, changes in social structure, and shifting agricultural practices transformed the social, economic, physical landscape. In this way, early county maps produced after 1700 and before ca. 1840 stand as one of richest and arguably most comprehensive cartographic source of industrial location information for Britain.<sup>10</sup> </p>
+			<p>The new surveyance, spatial coverage and <span style="text-decoration: line-through">resolution</span> <span style="color:red">scale</span> of county maps alone make them a valuable collection of historic information. Large-scale county maps importantly document early industrial development at the regional to national level during a period of history often referred to as the ‘Industrial Revolution’. During this period, advances in technology, changes in social structure, and shifting agricultural practices transformed the social, economic, physical landscape. In this way, early county maps produced after 1700 and before ca. 1840 stand as one of richest and arguably most comprehensive cartographic source of industrial location information for Britain.<sup>10</sup> </p>
 			
 				<h2>The Roy Military Survey of Scotland </h2>		
 
@@ -107,13 +109,13 @@
 			</div>			
 			
 			<p>For many regions of Scotland, especially so for the Highlands, the Roy Map is the most detailed—and often only—map available for the entire eighteenth-century until private and/or Ordnance Survey mapping was conducted more than half a century later. Therefore the Roy Map remains a valuable cartographic resource for the early industrial period in Scotland. Yet even the Roy Map is not without its critics regarding its accuracy, including Roy himself.<sup>13</sup>   It has limitations and deficiencies in terms of triangulation and representation of topography, like many early county maps and even some of the first maps appearing in the Old Series.<sup>14</sup>    </p>
-
+			
 			<div class = "notes">
-
+			
 			<h2>Notes</h2>
 			
 			<ol>
-			<li>Holt, R., 1988, The mills of medieval England: Oxford, Basil Blackwell, 208 p.; Wikander, Ö., The watermill, in (eds) Wikander, Ö , <em>Handbook of ancient water technology</em>: Leiden, Brill, pp 371-400; Langdon, J., 2004, Mills in the medieval economy: England 1300-1540: New York, Oxford University Press, 368 p.; Lucas, A., 2006, Wind, water, work: ancient and medieval milling technology: Leiden, Brill, 440 p. </li>
+			<li><a name="note1"></a>Holt, R., 1988, The mills of medieval England: Oxford, Basil Blackwell, 208 p.; Wikander, Ö., The watermill, in (eds) Wikander, Ö , <em>Handbook of ancient water technology</em>: Leiden, Brill, pp 371-400; Langdon, J., 2004, Mills in the medieval economy: England 1300-1540: New York, Oxford University Press, 368 p.; Lucas, A., 2006, Wind, water, work: ancient and medieval milling technology: Leiden, Brill, 440 p. </li>
 			
 			<li>Hammer, .C.I., 2008, A suitable place for putting a mill: water power landscapes and structures in Carolingian Bavaria: <em>Vierteljahrschrift für Sozial-und Wirtschaftsgeschichte</em>, 95, 3, pp. 319-334.</li> 
 			
@@ -146,8 +148,9 @@
 
 			
 			</ol>
+			
+			</div>
 
-			</div>			
 
 			</div>
 
@@ -156,5 +159,10 @@
 
 
 
+		
+
+<!--#include file="/assets/includes/gahelper.stm" -->
+
 	</body>
 </html>
+
