--- a/background/index.html
+++ b/background/index.html
@@ -11,8 +11,6 @@
 		<link type="text/css" rel="stylesheet" href="../css/maincss.css" media="screen" /> 
 
 
-
-        <!--#include file="/assets/includes/gtm.stm" -->
 </head>
 
 	<body>
@@ -75,7 +73,7 @@
 			<p>Funded by a variety of private enterprise and encouraged by awards set by the Society for Arts after 1759 CE,<sup>4</sup>  well over one hundred new county map surveys were conducted at the one- to four-inches to the mile scales into the early nineteenth century. A diverse array of amateur and professional mapmakers used some of the most advanced techniques of the time in the field to produce county maps for their subscribing sponsors.<sup>5</sup>  Before financial support by the central government in the mid-eighteenth century, carrying out accurate and timely surveys was exceedingly expensive and logistically difficult. This often led to considerable debt and bankruptcy (or worse) for numerous individuals involved in the map-making trade, including Thomas Jefferys, Charles Price, John Senex, Emanuel Bowen, Andrew Dury, Peter Burdett, Andrew Bryant, John Thompson, and the Greenwood brothers.<sup>6</sup> </p>
 			
 			
-			<p>By ca.1800 CE, however, mapmakers’ efforts produced not only beautiful but increasingly accurate engraved maps for nearly all of England, lowland Scotland and much of Wales. Many of the individuals involved with county surveys helped give rise to the incipient Ordnance Survey (then, the Trigonometric Survey of the Board of Ordnance; see Seymour)<sup>7</sup>  and established the modern one-inch map as a cartographic standard.<sup>8</sup>  By the 1820s, nearly every county was mapped at one inch to the mile <span style="text-decoration: line-through">resolution</span> <span style="color:red">scale</span>, with detailed maps from these surveys widely available to people of all classes and professions alike.</p>
+			<p>By ca.1800 CE, however, mapmakers’ efforts produced not only beautiful but increasingly accurate engraved maps for nearly all of England, lowland Scotland and much of Wales. Many of the individuals involved with county surveys helped give rise to the incipient Ordnance Survey (then, the Trigonometric Survey of the Board of Ordnance; see Seymour)<sup>7</sup>  and established the modern one-inch map as a cartographic standard.<sup>8</sup>  By the 1820s, nearly every county was mapped at one inch to the mile scale, with detailed maps from these surveys widely available to people of all classes and professions alike.</p>
 	
 			<div align="center"><img src="../img/fig2.jpg" width="600" alt="Dates of survey for the county maps used to map mills" title="Dates of survey for the county maps used to map mills" border="1" />
 
@@ -95,7 +93,7 @@
 			</div>
 
 
-			<p>The new surveyance, spatial coverage and <span style="text-decoration: line-through">resolution</span> <span style="color:red">scale</span> of county maps alone make them a valuable collection of historic information. Large-scale county maps importantly document early industrial development at the regional to national level during a period of history often referred to as the ‘Industrial Revolution’. During this period, advances in technology, changes in social structure, and shifting agricultural practices transformed the social, economic, physical landscape. In this way, early county maps produced after 1700 and before ca. 1840 stand as one of richest and arguably most comprehensive cartographic source of industrial location information for Britain.<sup>10</sup> </p>
+			<p>The new surveyance, spatial coverage and scale of county maps alone make them a valuable collection of historic information. Large-scale county maps importantly document early industrial development at the regional to national level during a period of history often referred to as the ‘Industrial Revolution’. During this period, advances in technology, changes in social structure, and shifting agricultural practices transformed the social, economic, physical landscape. In this way, early county maps produced after 1700 and before ca. 1840 stand as one of richest and arguably most comprehensive cartographic source of industrial location information for Britain.<sup>10</sup> </p>
 			
 				<h2>The Roy Military Survey of Scotland </h2>		
 
@@ -158,11 +156,7 @@
 		</div>
 
 
-
-		
-
-<!--#include file="/assets/includes/gahelper.stm" -->
-
 	</body>
 </html>
+
 
