--- a/project/methods/index.html
+++ b/project/methods/index.html
@@ -29,7 +29,7 @@
 
 			<div id="headerlinks">
 	
-				<p><a href="/projects/mills-of-britain/">Map</a> &nbsp; &nbsp;    <a href="../../background/">Background</a>  &nbsp; &nbsp; <strong>Project</strong> &nbsp; &nbsp; <a href="../../explore/">Explore More</a>  &nbsp; &nbsp; </p> 
+				<p><a href="/projects/mills-of-britain/">Map</a> &nbsp; &nbsp;  <a href="../project/">Project</a> &nbsp; &nbsp;  <strong>Background</strong>  &nbsp; &nbsp;  <a href="../explore/">Explore More</a>  &nbsp; &nbsp; </p>  
 	
 			</div>
 
@@ -60,23 +60,24 @@
 			</div>
 	
 			
-				<h2>Methods</h2>		
+				<h1>Methods</h1>		
 				
-			<p>Locations, mill types, and power usage, if indicated, were manually recorded from maps symbols and text on map sheets. Mill sites were positioned precisely at time of recording (see <a href="../accuracy/">Accuracy and Georeferencing</a>). After compiling recorded names from the Roy Gazetteer, Roy Gazetteer mill locations were corrected for distortion due to georeferencing of map sheets. Where appropriate, mills from the Roy Gazetteer were collocated to mills at the same site documented from pre-Ordnance Survey (dataset here) and/or Ordnance Survey map data (forthcoming to this viewer; see the <a href="/projects/mills/index.html">Scottish water mills website</a> or <a href="https://academic.oup.com/pnasnexus/article/3/7/pgae251/7713928">Jonell et al.</a> in <a href="../../explore/">Explore More</a> for the independent data). </p>
+			<p>Locations, mill types, and power usage, if indicated, were manually recorded from maps symbols and text on map sheets. Mill sites were positioned precisely by hand at the time of recording (see <a href="../accuracy/">Accuracy and Georeferencing</a>). After compiling recorded names from the Roy Gazetteer, Roy Gazetteer mill locations were corrected for the distortion created during the georeferencing of map sheets. Where appropriate, mills from the Roy Gazetteer were collocated to mills at the same site documented from pre-Ordnance Survey (dataset here) and/or Ordnance Survey map data (forthcoming; see the <a href="/projects/mills/index.html">Scottish water mills website</a> or <a href="https://academic.oup.com/pnasnexus/article/3/7/pgae251/7713928">Jonell et al.</a> in <a href="../../explore/">Explore More</a> for the independent data). </p>
 			
 			
-			<p>Because of the multiple surveys conducted for each county, multiple records may exist for any mill site. Each survey serves as a ‘snapshot’ in time, recording if the mill was identified at that location. </p>
+			<p>Because of the multiple surveys conducted for each county over the late 18th and early 19th centuries, multiple observations often exist for any singular mill site. Each survey serves as a ‘snapshot’ in time, recording if the mill was identified at that location by the surveyors. </p>
 			
-				<div align="center"><img src="../../img/fig6.jpg" width="425" alt="Waterwheels at Ennerdale from different maps" title="Waterwheels at Ennerdale from different maps" border="1" />
+				<div align="center"><img src="../../img/fig6.jpg" width="425" alt="Waterwheels at Ennerdale from different maps" title="Waterwheels at Ennerdale from different maps"/>
 			
 				<div class="imgcap"><strong>Figure 6</strong>. Three waterwheels at Ennerdale occupying the same site (see red box) noted in the (top) Cumberland map sheets for the Ordnance Survey’s first edition six-inch to the mile survey. Earlier survey leading to Hodskinson and Donald’s 1783 map (middle), although distorted, indicates one mill whereas Greenwood’s 1823 map (bottom) indicates two potential mills sharing a lade immediately downstream of the Ennerdale Water. Sources: (Middle) Hodskinson, J. and Donald, T., 1783, ...this map of the county of Cumberland, surveyed in 1770 & 1771: London, Hodskinson & Donald, 1 map. Shelfmark: EME.s.118. <a href="/view/220113199">View map</a>. (Bottom) Greenwood C., and Greenwood, J., 1823, Map of the county of Cumberland, from actual survey made in the years 1821 & 1822: London, G. Pringle Jr., 1 map on 3 sheets. Shelfmark: EME.b.3.11. <a href=" https://maps.nls.uk/geo/explore/#zoom=13.6&amp;lat=54.52961&amp;lon=-3.42322&amp;layers=248">View map</a> </div>
 				
 			
 			</div>
 			
-			<p>We primarily identified i) clearly demarcated watermill sites and ii) other possible watermill sites from the more ambiguously mapped sites based on their geographic orientation and location relative to rivers and topography (see <em>Position Relative to Rivers</em>). We do note many windmills, steam mills, animal mills and tide mills and are presently working more in detail on these records within our dataset. </p>
-
-			</div>
+			<p>We primarily identified i) clearly demarcated watermill sites and ii) other possible watermill sites from the more ambiguously mapped sites based on their geographic orientation and location relative to rivers and topography (see <em>Position Relative to Rivers</em>). We do note many windmills, steam mills, animal mills and tide mills in our dataset. Currentl, we are analysing these mill populations within our dataset in more detail, and may update the <em> Mills from Maps</em> section in the near future. </p>
+		
+				<hr></hr>
+			
 
 
 		</div>
