--- a/background/index.html
+++ b/background/index.html
@@ -70,7 +70,7 @@
 			
 			<div align="center"><img src="../img/fig1.jpg" width="800" alt="Detail from Yates, W. 1786. The County Palantine of Lancaster" title="Detail from Yates, W. 1786. The County Palantine of Lancaster" border="1" />
 			
-				<div class="imgcap"><strong>Figure 1</strong>. We noted mills on over 140 early county maps made by an array of map-makers. Watermills were often indicated on early county maps with waterwheel symbols (small circles with radiating spokes or vanes). Source: Yates'&nbsp; &nbsp;1786 map of Lancaster (<a href="/joins/10434.html">View map</a>).</div>
+				<div class="imgcap"><strong>Figure 1. Example 18th century county map with watermills</strong>. We noted mills on over 140 early county maps made by an array of map-makers. Watermills were often indicated on early county maps with waterwheel symbols (small circles with radiating spokes or vanes). Source: Yates' 1786 county map of Lancaster (<a href="/joins/10434.html">View map</a>).</div>
 				
 			
 			</div>
@@ -85,7 +85,7 @@
 			<div align="center"><img src="../img/fig2.jpg" width="800" alt="Dates of survey for the county maps used to map mills" title="Dates of survey for the county maps used to map mills" />
 
 			
-				<div class="imgcap"><strong>Figure 2</strong>. Dates of survey for the county maps used to map mills, with darker shades of grade indicating repeated surveys. Dates refer to the last year of survey when indicated or otherwise known from each entire published county map, else the year of publication is used. Not all county maps published are included; many do not clearly indicate mills and/or were unavailable for consultation. County boundary areas often have more survey periods than indicated here due to overlap between neighbouring surveys.</div>			
+				<div class="imgcap"><strong>Figure 2. Dates of survey for county maps consulted in this project</strong>. Dates refer to the last year of survey or revision when indicated, else the year of publication is used. For maps in county atlases (i.e., <a href="https://maps.nls.uk/atlas/thomson/"> John Thomson's 1832 Atlas of Scotland</a>), the late date of original survey used unless new survey and/or considerable revison noted by Thomson. Not all county maps that were published are included; many do not clearly indicate mills and/or were unavailable for consultation. County boundary areas often have more survey periods than indicated here due to overlap between neighbouring surveys. Darker gray = more surveys per county. </div>			
 	
 			</div>
 
@@ -96,7 +96,7 @@
 			<div align="center"><img src="../img/fig3.jpg" width="660" alt="Graphic index of OS Old Series maps and dates of survey" title="Graphic index of OS Old Series maps and dates of survey"  />
 
 			
-				<div class="imgcap"><strong>Figure 3</strong>. Early map data are cumulative by nature. Although it could be assumed that map sheets were surveyed and published synchronously, in truth these processes took place over long intervals of time. The first surveys conducted by the Trigonometric Board of Ordnance for the Old Series could span a decade or more, much like the earlier and contemporary county map surveys. Figure adapted from the <a href="https://www.charlesclosesociety.org/files/Oldseries/OldseriesIndex.htm"> Charles Close Society</a> and Harley, J.B., 1968, Error and Revision in Early Ordnance Survey Maps: <em>The Cartographic Journal</em>, 5, 2, pp. 115-124.  </div>	
+				<div class="imgcap"><strong>Figure 3.  Dates of survey for one-inch Old Series</strong>. Early map data are cumulative by nature. Although it could be assumed that map sheets were surveyed and published synchronously, in truth these processes took place over long intervals of time. The first surveys  for the Old Series conducted by the Trigonometric Board of Ordnance could span a decade or more, much like the&nbsp; county map surveys. Figure adapted from the <a href="https://www.charlesclosesociety.org/files/Oldseries/OldseriesIndex.htm"> Charles Close Society</a> and Harley, J.B. (1968; see Notes below).  </div>	
 			</div>
 
 
@@ -110,7 +110,7 @@
 			<div align="center"><img src="../img/fig4.jpg" width="800" alt="Detail from the Roy Military Survey of Scotland mapping" title="Detail from the Roy Military Survey of Scotland mapping" border="1" />
 
 			
-			  <div class="imgcap"><strong>Figure 3</strong>. The Roy Military Survey of Scotland map or 'Great Map' was the first map of its kind produced for Scotland. Source: <a href="/geo/roy/#zoom=13.7&amp;lat=57.09890&amp;lon=-2.23744&amp;layers=0">Roy Military Survey Strip 21 (Highlands)  Aberdeenshire</a>. &copy; The British Library Board.</div>	
+			  <div class="imgcap"><strong>Figure 3. William Roy's 'Great Map'</strong>. The Roy Military Survey of Scotland map or 'Great Map' was the first map of its kind produced for Scotland. Source: <a href="/geo/roy/#zoom=13.7&amp;lat=57.09890&amp;lon=-2.23744&amp;layers=0">Roy Military Survey Strip 21 (Highlands)  Aberdeenshire</a>. &copy;The British Library Board.</div>	
 			</div>			
 			
 			<p>For many regions of Scotland, especially so for the Highlands, the Roy Map is the most detailed—and often <i>only</i>—map available for the entire 18th century until renewed OS mapping (or privately-funded mapping) was conducted more than half a century later. Therefore the Roy Map remains a valuable cartographic resource for the early industrial period in Scotland. Yet even the Roy Map is not without its critics regarding its accuracy, including Roy himself.<sup><a href="#note1">13</a></sup>   It has limitations and deficiencies in terms its triangulation and representation of topography, like many early county maps and even some of the first maps appearing in the Old Series, with some noted differences existing between the protracted and fair copies.<sup><a href="#note1">14</a></sup></p>
