--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 				
 				</td</tr></table>
 
-		    <table><tr><td>Filter by <strong>Mill Type by map Symbol</strong>:</td><td>
+		    <table><tr><td>Filter by <strong>Mill Type by map symbol</strong>:</td><td>
 
 		    <form><select id="millsymbolselect" onchange="javascript:changesymboltype(this.selectedIndex);"></select></form></td</tr></table>
 
@@ -166,7 +166,7 @@
 
 			<h3>Change map</h3>
 			
-				<h4 id="transparencyboxes"><div id="circle-building" class="circle"></div>Peat-, moor- and fenland - change transparency:</h4>
+				<h4 id="transparencyboxes"><div id="circle-building" class="circle"></div>Upland, peat-, moor- and fenland - change transparency:</h4>
 
 	        		<input id="mapslider" data-slider-id='mapsslider' type="text" data-slider-min="10" data-slider-max="100" data-slider-step="1" data-slider-value="100" title="Change transparency of boxes" />
 	
