--- a/explore/index.html
+++ b/explore/index.html
@@ -56,7 +56,7 @@
 			<h1>Explore More</h1>
 	
 			<h2>Acknowledgements</h2>
-			<p>Numerous individuals inspired the curation of this database and were indespensible to its creation. We thank Chris Fleet (National Library of Scotland) for his tireless assistance and advice in our project and in the construction of this project webpage. The PhD research championed by Iara Nave Calton (University of Glasgow), lead creator of the 'Scottish Water Mills' webpage using Ordnance Survey maps, helped to inspire our sister page on county maps --- thank you, Iara! And, lastly, we cannot go without expressing our gratitude to our late colleague, Paul Bishop, who helped to set in motion this entire work. </p>
+			<p>Numerous individuals inspired the curation of this <a href="/projects/mills-of-britain/explore/database.html">database</a> and were indespensible to the creation of this <a href="/projects/mills-of-britain/#zoom=6.0&lat=54.80000&lon=-4.00000.html">viewer</a>. We thank Chris Fleet (National Library of Scotland) for his tireless assistance with our project and in the construction of this project webpage. The <a href="https://maps.nls.uk/projects/mills/index.html">'Scottish Water Mills Project' viewer</a>, created by Iara Nave Calton, inspired our sister viewer for county map data and will inform our future work. And, lastly, we cannot go without expressing our gratitude to our late University of Glasgow colleague, Paul Bishop, who helped to set this entire work in motion. </p>
 				<hr></hr>
 				
 			<h2>Data</h2>
@@ -70,7 +70,7 @@
 			<hr></hr>
 		
 			<h2>Updates and Versioning</h2>
-			Due to the (mostly) static nature of this database, changes to this webpage or the underlying data in the viewer may not be made for some time. This website was last updated on 17/10/2024 by TNJ. Database version: Mills of Britain_17291836_v1. 
+			Due to the (mostly) static nature of this database, changes to this webpage and the underlying data in the viewer may not be made for some time. This website was last updated on 17/10/2024 by TNJ. Database version: Mills of Britain_17291836_v1. 
 				
 			<hr></hr>
 			<h2>Contact</h2>
