--- a/explore/index.html
+++ b/explore/index.html
@@ -5,10 +5,10 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7; IE=EDGE" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" lang="en" />
 	        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
-		<title>Mills of Britain website - Explore More - National Library of Scotland / University of Glasgow</title>
+		<title>Mills of Britain website - Explore More - National Library of Scotland / University of Glasgow / University of Wollongong</title>
 
 		<!-- specific css to this page -->
-		<link type="text/css" rel="stylesheet" href="../css/maincss.css" media="screen" /> 
+		<link type="text/css" rel="stylesheet" href="../css/maincss.css?v=20240904" media="screen" /> 
 
 
 </head>
@@ -23,13 +23,13 @@
 
 			<h1>Mills of Britain</h1> 
 
-			<h5></h5>
+
 	
 			</div>
 
 			<div id="headerlinks">
 	
-				<p><a href="/projects/mills-of-britain/">Map</a> &nbsp; &nbsp;  <a href="../project/">Project</a> &nbsp; &nbsp;  <strong>Background</strong>  &nbsp; &nbsp;  <a href="../explore/">Explore More</a>  &nbsp; &nbsp; </p> 
+				<ul id="URHere"><li><a href="/projects/mills-of-britain/">Map</a> &nbsp; &nbsp;</li><li>   <a href="../background/">Background</a>  &nbsp; &nbsp; </li><li> <a href="../project/">Project</a> &nbsp; &nbsp; </li><li> <strong>Explore More</strong>  &nbsp; &nbsp; </li></ul>  
 	
 			</div>
 
@@ -49,9 +49,9 @@
 				
 			</div>
 
-	   		<div id = "mainContentOuter">
+<div id = "mainContentOuter">
 
-			<div id ="mainContent">
+			<div id ="mainContent" role="main">
 
 			<h1>Explore More</h1>
 	
@@ -87,6 +87,8 @@
 
 
 		</div>
+
+<!--#include file="/assets/includes/gahelper.stm" -->
 
 
 	</body>
